update the style due to Google Checks